# ray-tracing-offline

./: .gitignore  1605070_CameraHandler.cpp  1605070_CameraHandler.h  1605070_Command.h  1605070_Constants.h  1605070_DrawShape.cpp  1605070_DrawShape.h  1605070_Floor.cpp  1605070_Floor.h  1605070_General.cpp  1605070_General.h  1605070_Light.cpp  1605070_Light.h  1605070_Ray.cpp  1605070_Ray.h  1605070_Raytracing.cpp  1605070_Raytracing.h  1605070_Shape.cpp  1605070_Shape.h  1605070_Sphere.cpp  1605070_Sphere.h  1605070_Triangle.cpp  1605070_Triangle.h  1605070_main.cpp  CMakeLists.txt  README.md  main.cpp
opengl/: Opengl.cpp  Opengl.h
raytracing/: Raytracing.cpp  Raytracing.h
test-cases/2/: scene.txt
test-cases/3/: scene.txt
utils/cameraHandler/: CameraHandler.cpp  CameraHandler.h
utils/constants/: Constants.h
utils/drawShape/: DrawShape.cpp  DrawShape.h
utils/light/: Light.cpp  Light.h
utils/point/: Point.h
utils/ray/: Ray.cpp  Ray.h
utils/shape/: Shape.cpp  Shape.h
utils/shape/floor/: Floor.cpp  Floor.h
utils/shape/general/: General.cpp  General.h
utils/shape/sphere/: Sphere.cpp  Sphere.h
utils/shape/triangle/: Triangle.cpp  Triangle.h
